--- a/src/styles/_book-card.scss
+++ b/src/styles/_book-card.scss
@@ -2,10 +2,51 @@
     border: 1px solid rgba(255, 255, 255, 0.301);
     margin: 1rem;
     padding: 1rem;
-    background: rgba(0, 0, 0, 0.178);
+    background: #293833;
+    position: relative;
+    display: grid;
+    grid-template-rows: 1fr min-content min-content;
+    grid-template-columns: 1fr minmax(min-content , 3fr);
+    grid-template-areas: 
+    "image info"
+    "more more"
+    "details details";
+
+    &__image {
+        grid-area: image;
+    };
+
+    &__info {
+        grid-area: info;
+    };
+
+    &__more-btn {
+        grid-area: more;
+    }
+
+    &__details {
+        grid-area: details;
+    };
+
+    &__tag {
+        background: cadetblue;
+        display: inline-block;
+        margin: 2px;
+    };
+    
 }
-.book-card__tag {
-    background: cadetblue;
-    display: inline-block;
-    margin: 2px;
+
+.btn--book-card{
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+@media only screen and (max-width: 600px) {
+    .book-card {
+        border: 1px solid rgba(255, 255, 255, 0.301);
+        margin: .25rem;
+        padding: 0.25rem;
+        background: rgba(0, 0, 0, 0.178);
+               
+    }
 }
