--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,14 +1,49 @@
+@import './_constants.scss';
+
 .header {
+    a:link,
+    a:active,
+    a:visited,
+    a:hover {
+        text-decoration: none;
+        color: $light-font;
+        font-size: 2rem;
+        text-transform: lowercase; 
+        //transition: all .4s;
+        padding: 1rem;
+        border: 1px solid rgba($light-font, 0);
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    }
+
+    a:hover {
+        border: 1px solid $light-font;        
+    }
+
+    a:active {
+        color: lighten(rgb(158, 158, 140), 10);
+        border: 1px solid lighten(rgb(158, 158, 140), 10);
+    }
+
     position: relative;
-}
-
-.header__navigation {
-    position: absolut;
-    right: 0;
-    top: 0;
-    ul > * {
-        margin: 2rem;
-        
-
+      
+    h1 {
+        font-family: 'Stardos Stencil', cursive;
+        font-size: 8rem;
+        position: absolute;
+        color: $dark-font;
+    }
+    h3 {
+        font-family: 'Stardos Stencil', cursive;
+        color: $dark-font;
+    }
+    &__navigation {
+        position: absolute;
+        right: 4rem;
+        top: .5rem;
+        ul > * {
+            margin: 2rem;
+            
+    
+        }
     }
 }
