--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,93 +1,14 @@
+@import './_main.scss';
+
+@import './_sorted-component.scss';
+@import './_search-sort.scss';
+@import './_book-cards.scss';
 @import './_book-card.scss';
 @import './_header.scss';
 
-*, 
-*::before, 
-*::after {
-    padding: 0;
-    margin: 0;
-    box-sizing: inherit;
-}
+@import './_left-bar.scss';
 
-html {
-    box-sizing: border-box;
-    font-size: 62.5%
-}
+@import './_author-details.scss';
+@import './_footer.scss';
 
-body {
-    font-family: sans-serif;
-    color: rgb(44, 46, 46);
-    font-weight: 300;
-    line-height: 1.6;
-    height: 100vh;
-    background-image: linear-gradient(45deg, rgb(145, 184, 137), #367873);
-    background-attachment: fixed;
-    background-repeat: no-repeat;    
-    
-}
-
-.content {
-    // margin: 2rem;
-    padding: 2rem;
-    max-width: 100vw;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 25vw 1fr;
-    grid-template-rows: 20vh 1fr 10vh;
-    grid-template-areas: 
-    "header header header"
-    "left-bar main main"
-    "footer footer footer";
-    grid-gap: 2rem;    
-}
-
-.content > * {
-    background: rgb(44, 46, 46);
-    
-}
-
-.sorted-component {
-    display: grid;
-    grid-template-columns: 50vw 1fr;
-    grid-template-rows: 1fr;
-    grid-template-areas: 
-    "sorted-component_content search-sort";
-    grid-gap: 2rem;
-}
-
-.sorted-component_content {
-    padding: 2rem;
-    grid-area: sorted-component_content;
-}
-
-.search-sort {
-    padding: 2rem;
-    grid-area: search-sort;
-    padding-inline-end: 2rem;
-    background: rgb(219, 185, 199);
-}
-
-.header {
-    padding: 2rem;
-    background: #E34528;
-    grid-area: header;
-}
-
-.left-bar {
-    padding: 2rem;
-    background: rgb(228, 211, 218);
-    grid-area: left-bar;
-}
-
-.main {
-    background: none;
-    grid-area: main;
-}
-
-.footer {
-    padding: 2rem;
-    background: #E28F53;
-    grid-area: footer;
-}
-
-
+@import './_constants.scss';
