add more styles

--- a/src/styles/_book-card.scss
+++ b/src/styles/_book-card.scss
@@ -1,8 +1,10 @@
+@import './_constants.scss';
+
 .book-card {
     border: 1px solid rgba(255, 255, 255, 0.301);
     margin: 1rem;
     padding: 1rem;
-    background: #293833;
+    background: $dark-transparent;
     position: relative;
     display: grid;
     grid-template-rows: 1fr min-content min-content;
@@ -11,7 +13,9 @@
     "image info"
     "more more"
     "details details";
-
+    & > * {
+        padding: .5rem;
+    }
     &__image {
         grid-area: image;
     };
@@ -29,18 +33,34 @@
     };
 
     &__tag {
-        background: cadetblue;
+        background: rgb(44, 46, 46);
         display: inline-block;
         margin: 2px;
     };
+    &__btn {
+        position: absolute;
+        font-size: 2rem;
+        right: 0;
+        top: 0;
+        // width: 2rem;
+        // height: 2rem;
+        margin-right: .7rem;
+        padding: 0;
+        border: none;
+
+        &--plus {
+            //background-color: rgba($dark-font, 0.2);
+        }
+
+        &--minus {
+            //background-color: $light-font
+        }
+    }
     
 }
 
-.btn--book-card{
-    position: absolute;
-    right: 0;
-    top: 0;
-}
+
+
 @media only screen and (max-width: 600px) {
     .book-card {
         border: 1px solid rgba(255, 255, 255, 0.301);
