--- a/src/styles/_author-details.scss
+++ b/src/styles/_author-details.scss
@@ -1,6 +1,32 @@
-.auth-details__descript{
-    column-count: 2;
-    column-gap: 4rem;
-    column-rule: 1px solid black;
-    hyphens: auto;
+.author {
+    background: $dark-transparent;
+    padding: 1rem;
+    font-size: 1.3rem;
+    display: flex;
+    flex-direction: column;
+    h1 {
+        margin: 2rem;
+    }
+    &__main-info {
+        h3 {
+            margin-right: 2rem;
+        }
+        div * {
+            display: inline;
+        }
+        img {
+            float: left;
+            margin: 0 2rem;
+            
+        }
+    }
+    // &__description{
+    
+    //     column-count: 2;
+    //     column-gap: 4rem;
+    //     column-rule: 1px solid black;
+    //     hyphens: auto;
+    // }
+   
+    
 }
