--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -6,9 +6,16 @@ $padding-comp: 2rem;
     grid-area: footer;
     display: flex;
     flex-direction: row;
+    position: relative;
 
     * {
         margin: 0 1rem;
+       
+    }
+
+    h5 {
+        margin: 0;
+        
     }
     
     div {
@@ -16,10 +23,12 @@ $padding-comp: 2rem;
         filter: brightness(300%) contrast(100%) sepia(2);
         background-repeat: no-repeat;
         background-size: contain;
-        //background-image: url('./photo-1515125520141-3e3b67bc0a88.jpg');
-        width: 100px;
-        height: 2.5rem;;
+        width: 70px;
+        height: 2rem;
     }
-
+    p {
+        position: absolute;
+        right: 0;
+    }
     
 }
