--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,16 +1,16 @@
 @import './_constants.scss';
 
 .header {
+    grid-area: header;
     a:link,
     a:active,
     a:visited,
     a:hover {
         text-decoration: none;
+        text-transform: lowercase;      
         color: $light-font;
-        font-size: 2rem;
-        text-transform: lowercase; 
-        //transition: all .4s;
-        padding: 1rem;
+        font-size: 1.5rem;
+        padding: .5rem;
         border: 1px solid rgba($light-font, 0);
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     }
@@ -28,22 +28,97 @@
       
     h1 {
         font-family: 'Stardos Stencil', cursive;
-        font-size: 8rem;
+        //font-size: 8rem;
+        font-size: 4rem;
         position: absolute;
+        top: 6rem; //
         color: $dark-font;
     }
     h3 {
         font-family: 'Stardos Stencil', cursive;
         color: $dark-font;
+        position: absolute;
+        top: 6rem;
     }
     &__navigation {
         position: absolute;
-        right: 4rem;
-        top: .5rem;
+        width: 100%;
+        text-align: center;
+        right: 0;
+        top: 1rem;
         ul > * {
-            margin: 2rem;
-            
+            //margin: 2rem;
+            margin: 1rem;
     
         }
     }
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {   
+ 
+} 
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {   
+
+.header {
+    a:link,
+    a:active,
+    a:visited,
+    a:hover {
+        font-size: 2rem;
+        padding: .5rem;
+    }
+
+    h1 {
+        font-family: 'Stardos Stencil', cursive;
+        //font-size: 8rem;
+        font-size: 6rem;
+        position: absolute;
+        top: 4rem; //
+        color: $dark-font;
+    }
+    h3 {
+        font-family: 'Stardos Stencil', cursive;
+        color: $dark-font;
+        position: absolute;
+        top: 4rem;
+    }
+    &__navigation {
+        width: auto;
+        right: 4rem;    
+    }
+}
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+} 
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) { 
+    .header {
+        a:link,
+        a:active,
+        a:visited,
+        a:hover {
+            font-size: 2rem;          
+            padding: 1rem;
+        }
+        h1 {
+            font-size: 8rem;
+            top: auto;
+        }
+        h3 {
+            top: auto;
+        }
+        &__navigation {
+            width: auto;
+            right: 4rem;    
+        }
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {   
 }
