--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,14 +1,15 @@
 @import './_main.scss';
-
+@import './_home.scss';
 @import './_sorted-component.scss';
 @import './_search-sort.scss';
 @import './_book-cards.scss';
 @import './_book-card.scss';
 @import './_header.scss';
-
+@import './_content.scss';
 @import './_left-bar.scss';
-
+@import './_about.scss';
 @import './_author-details.scss';
 @import './_footer.scss';
 
+@import './_spinner.scss';
 @import './_constants.scss';
