--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -1,30 +1,34 @@
-.content {
-    padding: $padding-comp;
-    max-width: 100vw;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 25vw 1fr;
-    grid-template-rows: 20vh min-content 10vh;
-    grid-template-areas: 
-    "header header header"
-    "left-bar main main"
-    "footer footer footer";
-    grid-gap: 2rem;    
-}
+// .content {
+//     padding: 2rem;
+//     max-width: 100vw;
+//     height: 100vh;
+//     display: grid;
+//     grid-template-columns: 25vw 1fr;
+//     grid-template-rows: 20vh min-content 10vh;
+//     grid-template-areas: 
+//     "header header header"
+//     "left-bar main main"
+//     "footer footer footer";
+//     grid-gap: 2rem;    
+// }
 
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) { 
     .content {        
         padding: 0;
+        max-width: 100vw;
+        height: 100vh;
+        display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 20vh 1fr 1fr 50vh;
+        grid-template-rows: 20vh 1fr min-content 10vh;
         grid-template-areas: 
         "header"
         "main"
         "left-bar"
         "footer";
         grid-gap: .5rem;    
+        
     }
 } 
 
