--- a/src/styles/_book-cards.scss
+++ b/src/styles/_book-cards.scss
@@ -4,11 +4,11 @@
        flex-direction: row;
        margin-top: 1.6rem;
        overflow: scroll;  
-    }
-}
+    };
+};
 
 @media only screen and (min-width: 768px) {
     .left-bar-cards {
         padding: 0rem;
-    }
-}
+    };
+};
