--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -3,4 +3,11 @@ $dark-font: rgb(44, 46, 46);
 $light-font: rgb(158, 158, 140);
 $footer-green: #293833;
 
-$dark-transparent: #00000069;
+$dark-transparent: rgba(0, 0, 0, 0.692);
+
+@mixin disabled-form {
+    cursor: not-allowed;
+    background: darken($dark-font, 10%);
+    color: darken($dark-font, 12%);
+    border-color:  darken($dark-font, 12%);
+}
