--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -2,6 +2,8 @@
 
 .header {
     grid-area: header;
+    position: relative;
+
     a:link,
     a:active,
     a:visited,
@@ -9,116 +11,87 @@
         text-decoration: none;
         text-transform: lowercase;      
         color: $light-font;
-        font-size: 1.5rem;
+        font-size: 2rem;
         padding: .5rem;
         border: 1px solid rgba($light-font, 0);
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-    }
+    };
 
     a:hover {
         border: 1px solid $light-font;        
-    }
+    };
 
     a:active {
         color: lighten(rgb(158, 158, 140), 10);
         border: 1px solid lighten(rgb(158, 158, 140), 10);
-    }
-
-    position: relative;
+    };
       
-    h1 {
+    h1, h3 {
+        margin-left: .5rem;
         font-family: 'Stardos Stencil', cursive;
-        //font-size: 8rem;
-        font-size: 4rem;
-        position: absolute;
-        top: 6rem; //
-        color: $dark-font;
-    }
-    h3 {
-        font-family: 'Stardos Stencil', cursive;
-        color: $dark-font;
         position: absolute;
         top: 6rem;
+        color: $dark-font;
     }
+    h1 {
+        font-size: 4rem;
+    };
+
+    h3 {
+        top: 6rem;
+    };
+
     &__navigation {
         position: absolute;
         width: 100%;
-        text-align: center;
         right: 0;
         top: 1rem;
+        text-align: center;        
         ul > * {
-            //margin: 2rem;
             margin: 1rem;
     
-        }
-    }
-}
+        };
+    };
+};
 
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {   
- 
-} 
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {   
+    .header { 
+        h1, h3 {
+            top: 4rem;
+        };
+        h1 { 
+            font-size: 6rem;
+        };
+    
+        &__navigation {
+            width: auto;
+            right: 4rem;    
+        };
+    };
+};
 
-.header {
-    a:link,
-    a:active,
-    a:visited,
-    a:hover {
-        font-size: 2rem;
-        padding: .5rem;
-    }
-
-    h1 {
-        font-family: 'Stardos Stencil', cursive;
-        //font-size: 8rem;
-        font-size: 6rem;
-        position: absolute;
-        top: 4rem; //
-        color: $dark-font;
-    }
-    h3 {
-        font-family: 'Stardos Stencil', cursive;
-        color: $dark-font;
-        position: absolute;
-        top: 4rem;
-    }
-    &__navigation {
-        width: auto;
-        right: 4rem;    
-    }
-}
-}
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-} 
-
-/* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) { 
     .header {
         a:link,
         a:active,
         a:visited,
-        a:hover {
-            font-size: 2rem;          
+        a:hover {               
             padding: 1rem;
-        }
+        };
+
         h1 {
-            font-size: 8rem;
-            top: auto;
-        }
+            top: 2.5rem;
+            font-size: 8rem;            
+        };
+
         h3 {
-            top: auto;
-        }
+            top: 3rem;
+        };
+
         &__navigation {
             width: auto;
             right: 4rem;    
-        }
-    }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {   
-}
+        };
+    };
+};
