--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -4,4 +4,22 @@
     background: $dark-transparent;
     padding: 1rem;
     font-size: 1.5rem;
-}
+
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    
+    h1 {
+        margin-bottom: 1rem;
+    };
+
+    p {
+        margin-bottom: .5rem;
+        
+        &::first-letter {
+            font-size: 1.6rem;
+            font-weight: 600;
+        };
+    };
+};
